# simplec

./: .env  .env.example  .gitignore  <!DOCTYPE html>.css  AGENTS.md  CLAUDE.md  CONTEXT.md  ForChat.md  MEMORY.md  MIGRATION.md  Makefile  PROJECT_MEMORY.md  README.md  app.py  deploy.sh  docker-compose.yml  gigachat_token.py.save  install.sh  mock_logs_server.py  pyproject.toml  requirements.txt  run.py  setup_new_arch.sh  start.bat  start.sh  tc_formatter.py
.streamlit/: config.toml  style.css
agents/: __init__.py  a2a_builder.py  file_parser.py  kafka_client.py  layered_generator.py  llm_client.py  metrics_message_builder.py  metrics_scheduler.py  model_bench.py  model_bench_export.py  prompt_guard.py  prompt_templates.py  qa_doc_generator.py  single_case_generator.py  tc_formatter.py  test_generator.py
backend/: auth.py  main.py  schemas.py
certs/: README.md  build_bundle.sh
data/: alert_folders.json  alert_scripts.json  autotest_run_config.json  autotest_run_history.json  job_folders.json  job_history.json  jobs.json  kernel_audit.json  teams.json  users.json
db/: alerts_store.py  audit_log.py  autotest_runs_store.py  feedback_store.py  gen_sessions_store.py  jdbc_drivers_store.py  jobs_store.py  kafka_explorer_store.py  metrics_models.py  model_bench_scenarios_store.py  model_bench_store.py  postgres.py  requirements_store.py  secure_config.py  team_store.py  testdata_connections.py  user_store.py  vector_store.py
frontend/: .env.local  .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
(+212 files in other folders)
