[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplec"
version = "0.0.1"
description = "SimpleC — generator of Zephyr test-cases (FastAPI + Jinja2)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["simplec*"]
